--- a/WEBProject/WebContent/WEB-INF/web.xml
+++ b/WEBProject/WebContent/WEB-INF/web.xml
@@ -30,5 +30,15 @@
 	  	<servlet-name>Registration</servlet-name>
 	  	<url-pattern>/registration</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>Faq</servlet-name>
+	  	<servlet-class>controller.Faq</servlet-class>
+	</servlet>
+	  
+	<servlet-mapping>
+	  	<servlet-name>Faq</servlet-name>
+	  	<url-pattern>/faq</url-pattern>
+	</servlet-mapping>
 
 </web-app>
