added product and category classes to manage servlets and jsp scripts

--- a/WEBProject/WebContent/WEB-INF/web.xml
+++ b/WEBProject/WebContent/WEB-INF/web.xml
@@ -41,4 +41,14 @@
 	  	<url-pattern>/faq</url-pattern>
 	</servlet-mapping>
 
+	<servlet>
+		<servlet-name>Search</servlet-name>
+		<servlet-class>controller.Search</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>Search</servlet-name>
+		<url-pattern>/search</url-pattern>
+	</servlet-mapping>
+
 </web-app>
