--- a/WEBProject/WebContent/WEB-INF/web.xml
+++ b/WEBProject/WebContent/WEB-INF/web.xml
@@ -51,4 +51,14 @@
 		<url-pattern>/search</url-pattern>
 	</servlet-mapping>
 
+	<servlet>
+		<servlet-name>Product</servlet-name>
+		<servlet-class>controller.ProductServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>Product</servlet-name>
+		<url-pattern>/product</url-pattern>
+	</servlet-mapping>
+
 </web-app>
