--- a/WEBProject/WebContent/WEB-INF/web.xml
+++ b/WEBProject/WebContent/WEB-INF/web.xml
@@ -22,6 +22,26 @@
 	</servlet-mapping>
 	
 	<servlet>
+		<servlet-name>ForgottenPassword</servlet-name>
+	  	<servlet-class>controller.ForgottenPassword</servlet-class>
+	</servlet>
+	  
+	<servlet-mapping>
+	  	<servlet-name>ForgottenPassword</servlet-name>
+	  	<url-pattern>/forgottenPassword</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>PasswordRecovery</servlet-name>
+	  	<servlet-class>controller.PasswordRecovery</servlet-class>
+	</servlet>
+	  
+	<servlet-mapping>
+	  	<servlet-name>PasswordRecovery</servlet-name>
+	  	<url-pattern>/passwordRecovery</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
 		<servlet-name>Registration</servlet-name>
 	  	<servlet-class>controller.Registration</servlet-class>
 	</servlet>
