--- a/WEBProject/WebContent/WEB-INF/web.xml
+++ b/WEBProject/WebContent/WEB-INF/web.xml
@@ -42,6 +42,16 @@
 	</servlet-mapping>
 	
 	<servlet>
+		<servlet-name>Cart</servlet-name>
+	  	<servlet-class>controller.Cart</servlet-class>
+	</servlet>
+	  
+	<servlet-mapping>
+	  	<servlet-name>Cart</servlet-name>
+	  	<url-pattern>/cart</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
 		<servlet-name>Registration</servlet-name>
 	  	<servlet-class>controller.Registration</servlet-class>
 	</servlet>
