--- a/WEBProject/WebContent/WEB-INF/web.xml
+++ b/WEBProject/WebContent/WEB-INF/web.xml
@@ -110,6 +110,16 @@
 	  	<servlet-name>Faq</servlet-name>
 	  	<url-pattern>/faq</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>Map</servlet-name>
+	  	<servlet-class>controller.Map</servlet-class>
+	</servlet>
+	  
+	<servlet-mapping>
+	  	<servlet-name>Map</servlet-name>
+	  	<url-pattern>/map</url-pattern>
+	</servlet-mapping>
 
 	<servlet>
 		<servlet-name>Search</servlet-name>
