--- a/WEBProject/WebContent/WEB-INF/web.xml
+++ b/WEBProject/WebContent/WEB-INF/web.xml
@@ -222,4 +222,14 @@
 		<url-pattern>/orders</url-pattern>
 	</servlet-mapping>
 
+	<filter>
+		<filter-name>CharsetFilter</filter-name>
+		<filter-class>controller.CharsetFilter</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>CharsetFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
 </web-app>
