--- a/WEBProject/WebContent/WEB-INF/web.xml
+++ b/WEBProject/WebContent/WEB-INF/web.xml
@@ -22,6 +22,16 @@
 	</servlet-mapping>
 	
 	<servlet>
+		<servlet-name>Assistance</servlet-name>
+	  	<servlet-class>controller.Assistance</servlet-class>
+	</servlet>
+	  
+	<servlet-mapping>
+	  	<servlet-name>Assistance</servlet-name>
+	  	<url-pattern>/assistance</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
 		<servlet-name>Login</servlet-name>
 	  	<servlet-class>controller.Login</servlet-class>
 	</servlet>
