--- a/WEBProject/WebContent/WEB-INF/web.xml
+++ b/WEBProject/WebContent/WEB-INF/web.xml
@@ -251,6 +251,16 @@
 		<servlet-name>Orders</servlet-name>
 		<url-pattern>/orders</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>Statistics</servlet-name>
+		<servlet-class>controller.Statistics</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>Statistics</servlet-name>
+		<url-pattern>/statistics</url-pattern>
+	</servlet-mapping>
 
 	<filter>
 		<filter-name>CharsetFilter</filter-name>
@@ -261,5 +271,7 @@
 		<filter-name>CharsetFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
+	
 
 </web-app>
